--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.6",
+    "@types/lodash": "^4.14.121",
     "@types/node": "^11.9.4",
     "faker": "^4.1.0",
     "jest": "^24.1.0",
@@ -27,5 +28,8 @@
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
