--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "learn_angular",
-  "homepage": "https://github.com/mrdulin/learn_angular",
+  "name": "angular-route-demos",
+  "homepage": "https://github.com/mrdulin/angular-route-demos.git",
   "authors": [
     "dulin <novaline@qq.com>"
   ],
@@ -18,9 +18,6 @@
   ],
   "devDependencies": {
     "angular": "~1.4.8",
-    "bootstrap": "~3.3.5",
-    "angular-animate": "~1.4.8",
-    "angular-cookies": "~1.4.8",
     "angular-route": "~1.4.8",
     "angular-mocks": "~1.4.8"
   }
