--- a/package.json
+++ b/package.json
@@ -1,40 +1,31 @@
 {
-  "name": "angular-route-demos",
+  "name": "js-decorators",
   "version": "1.0.0",
-  "description": "angular-route demos with browserify",
-  "main": "",
-  "directories": {
-    "test": "test"
-  },
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/mkdirp dist && browserify app/app.js -o dist/bundle.js -p [parcelify -o dist/bundle.css]",
-    "watch": "./node_modules/.bin/watchify app/app.js -o dist/bundle.js -p [parcelify -wo dist/bundle.css] --debug --verbose",
-    "serve": "./node_modules/.bin/beefy app/app.js:dist/bundle.js 3000 --live --open --cwd ./app"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "style": [
-    "./node_modules/bootstrap/dist/css/bootstrap.theme.css",
-    "./node_modules/bootstrap/dist/css/bootstrap.css",
-    "app/**/*.css"
-  ],
-  "keywords": [
-    "angular",
-    "angular-route",
-    "browserify",
-    "watchify"
-  ],
-  "author": "dulin",
-  "license": "ISC",
-  "dependencies": {
-    "angular": "^1.5.5",
-    "angular-route": "^1.5.5",
-    "bootstrap": "^3.3.6",
-    "jquery": "^2.2.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrdulin/js-decorators.git"
   },
+  "keywords": [],
+  "author": "mrdulin <novaline.dulin@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mrdulin/js-decorators/issues"
+  },
+  "homepage": "https://github.com/mrdulin/js-decorators#readme",
   "devDependencies": {
-    "beefy": "^2.1.6",
-    "browserify": "^13.0.1",
-    "mkdirp": "^0.5.1",
-    "parcelify": "^2.1.0",
-    "watchify": "^3.7.0"
+    "@types/faker": "^4.1.5",
+    "@types/jest": "^24.0.6",
+    "@types/node": "^11.9.4",
+    "faker": "^4.1.0",
+    "jest": "^24.1.0",
+    "ts-jest": "^23.10.5",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
   }
 }
